// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's updateUserProfile2 destination action: all possible fields 1`] = `
Object {
  "attributes": Array [
    Object {
      "_update_existing_only": true,
      "braze_id": "gW8BHbM8]GrBQUvvo",
      "country": "gW8BHbM8]GrBQUvvo",
      "current_location": Object {
        "latitude": 52141847446814.72,
        "longitude": 52141847446814.72,
      },
      "date_of_first_session": "2021-02-01T00:00:00.000Z",
      "date_of_last_session": "2021-02-01T00:00:00.000Z",
      "dob": "2021-01-31",
      "email": "sakafjah@rulib.nl",
      "email_click_tracking_disabled": false,
      "email_open_tracking_disabled": false,
      "email_subscribe": "gW8BHbM8]GrBQUvvo",
      "external_id": "gW8BHbM8]GrBQUvvo",
      "facebook": Object {
        "id": "gW8BHbM8]GrBQUvvo",
        "likes": Array [
          "gW8BHbM8]GrBQUvvo",
        ],
        "num_friends": 5214184744681472,
      },
      "first_name": "gW8BHbM8]GrBQUvvo",
      "gender": "gW8BHbM8]GrBQUvvo",
      "home_city": "gW8BHbM8]GrBQUvvo",
      "image_url": "http://tunaazi.de/tehwu",
      "language": "gW8BHbM8]GrBQUvvo",
      "last_name": "gW8BHbM8]GrBQUvvo",
      "marked_email_as_spam_at": "2021-02-01T00:00:00.000Z",
      "phone": "gW8BHbM8]GrBQUvvo",
      "push_subscribe": "gW8BHbM8]GrBQUvvo",
      "push_tokens": Array [
        Object {
          "app_id": "gW8BHbM8]GrBQUvvo",
          "device_id": "gW8BHbM8]GrBQUvvo",
          "token": "gW8BHbM8]GrBQUvvo",
        },
      ],
      "testType": "gW8BHbM8]GrBQUvvo",
      "time_zone": "gW8BHbM8]GrBQUvvo",
      "twitter": Object {
        "followers_count": 5214184744681472,
        "friends_count": 5214184744681472,
        "id": "gW8BHbM8]GrBQUvvo",
        "screen_name": "gW8BHbM8]GrBQUvvo",
        "statuses_count": 5214184744681472,
      },
      "user_alias": Object {
        "alias_label": "gW8BHbM8]GrBQUvvo",
        "alias_name": "gW8BHbM8]GrBQUvvo",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's updateUserProfile2 destination action: it should work with a single batched events 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's updateUserProfile2 destination action: it should work with a single batched events 2`] = `
Object {
  "attributes": Array [
    Object {
      "_update_existing_only": true,
      "braze_id": undefined,
      "country": "United States",
      "current_location": Object {
        "latitude": 40.2964197,
        "longitude": -76.9411617,
      },
      "date_of_first_session": undefined,
      "date_of_last_session": undefined,
      "dob": undefined,
      "email": undefined,
      "email_click_tracking_disabled": undefined,
      "email_open_tracking_disabled": undefined,
      "email_subscribe": undefined,
      "external_id": "user1234",
      "facebook": undefined,
      "first_name": undefined,
      "gender": undefined,
      "home_city": undefined,
      "image_url": undefined,
      "language": undefined,
      "last_name": undefined,
      "marked_email_as_spam_at": undefined,
      "phone": undefined,
      "push_subscribe": undefined,
      "push_tokens": undefined,
      "time_zone": undefined,
      "twitter": undefined,
      "user_alias": undefined,
    },
  ],
}
`;

exports[`Testing snapshot for Braze's updateUserProfile2 destination action: it should work with batched events 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
    "x-braze-batch": Array [
      "true",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's updateUserProfile2 destination action: it should work with batched events 2`] = `
Object {
  "attributes": Array [
    Object {
      "_update_existing_only": true,
      "braze_id": undefined,
      "country": "United States",
      "current_location": Object {
        "latitude": 40.2964197,
        "longitude": -76.9411617,
      },
      "date_of_first_session": "2000-01-05T12:00:00.000Z",
      "date_of_last_session": "2000-01-05T12:00:00.000Z",
      "dob": undefined,
      "email": undefined,
      "email_click_tracking_disabled": undefined,
      "email_open_tracking_disabled": undefined,
      "email_subscribe": undefined,
      "external_id": "user1234",
      "facebook": undefined,
      "first_name": undefined,
      "gender": undefined,
      "home_city": undefined,
      "image_url": undefined,
      "language": undefined,
      "last_name": undefined,
      "marked_email_as_spam_at": "2000-01-05T12:00:00.000Z",
      "phone": undefined,
      "push_subscribe": undefined,
      "push_tokens": undefined,
      "time_zone": undefined,
      "twitter": undefined,
      "user_alias": undefined,
    },
    Object {
      "_update_existing_only": true,
      "braze_id": undefined,
      "country": "United States",
      "current_location": Object {
        "latitude": 40.2964197,
        "longitude": -76.9411617,
      },
      "date_of_first_session": "2000-01-05T12:00:00.000Z",
      "date_of_last_session": "2000-01-05T12:00:00.000Z",
      "dob": undefined,
      "email": undefined,
      "email_click_tracking_disabled": undefined,
      "email_open_tracking_disabled": undefined,
      "email_subscribe": undefined,
      "external_id": "user1234",
      "facebook": undefined,
      "first_name": undefined,
      "gender": undefined,
      "home_city": undefined,
      "image_url": undefined,
      "language": undefined,
      "last_name": undefined,
      "marked_email_as_spam_at": "2000-01-05T12:00:00.000Z",
      "phone": undefined,
      "push_subscribe": undefined,
      "push_tokens": undefined,
      "time_zone": undefined,
      "twitter": undefined,
      "user_alias": undefined,
    },
  ],
}
`;

exports[`Testing snapshot for Braze's updateUserProfile2 destination action: only required fields 1`] = `
Object {
  "attributes": Array [
    Object {
      "_update_existing_only": true,
      "braze_id": "gW8BHbM8]GrBQUvvo",
      "external_id": "gW8BHbM8]GrBQUvvo",
    },
  ],
}
`;
